# cmake-scenario

./: CMakeLists.txt  Makefile
dynamic_lib/: CMakeLists.txt
dynamic_lib/install/include/: dynamic_lib.h
dynamic_lib/install/lib/: libdynamic_lib.so.1.0
dynamic_lib/src/: dynamic_lib.c
main/: CMakeLists.txt  main.c  main.cpp
static_lib/: CMakeLists.txt
static_lib/include/: static_lib.h
static_lib/include/static_sub/: static_sub.h
static_lib/src/: private.h  static_lib.c
static_lib/src/static_sub/: static_sub.c
